# closure

./: .gitignore  .gitmodules  CMakeLists.txt  CRASH_TRIAGE.md  closure-compiler++.py  closure-compiler.py  denylist.txt  trace-pc-guard.c
Clean-up/: .main.dot  .start_main.dot  cfg.dot  curl.bc  curl.ll  joined.bc  joined_sqlite.bc  opt.bc  opt.ll  opt.s  sqlite_fuzz.bc  sqlite_win_new.bc  stub.bc  stub.ll  stubMain.c  stubMainMod.bc
Clean-up/experiment/: data processing.ipynb  run.sh  runtest.sh  time.txt
Clean-up/experiment/.ipynb_checkpoints/: data processing-checkpoint.ipynb
Clean-up/experiment/src/: Makefile  jasper_renamed.bc  run.out  stub.bc  stub.ll  stubMain.c  stubMainnoLoop.c
compiler/: CMakeLists.txt  closure.cc
correctness-experiment/: CMakeLists.txt  correctness.cc  coverage-pc-guard.c
global-pass/: CMakeLists.txt  steps.txt
global-pass/examples/: example2.ll  jrhm.bc  jrhm.ll  random_exit.c  random_exit_hashmap.c  rhm.out  run.out  stub.c  stub.ll  stubMain.c  stub_no_prints.ll  t.out  test.bc  test.ll  test2.bc
global-pass/examples/test/: joined.ll  run.bc  run.ll
global-pass/skeleton/: shadowGlobals.cpp
global-pass/src/: Pass.cpp
global-pass/test/: joined.out  joinedtest.bc  joinedtest.ll  jtest.out  r.bc  random_exit.c  random_exit2.bc  random_exit_hashmap.c  rehm.ll
heap-pass/: CMakeLists.txt  README.md  mymemlib.c
heap-pass/examples/: a.bc  a.ll  a.out  example.out  random_exit_big_allocations.c  stub_prints.ll  t.ll  test.out
heap-pass/examples/test/: rba.ll  stub.ll
heap-pass/skeleton/: CMakeLists.txt
heap-pass/src/: Pass.cpp
heap-pass/test/: joined.bc  joined2.bc  joined3.bc  joined3.ll  joinedhm.bc  joinedhm.ll  jr.ll  r2.bc  random_exit.bc  random_exit2.ll  random_exit_renamed2.ll  rehm.bc  test2.ll
include/: Common.h  ExitPass.h  FilePass.h  GlobalPass.h  HeapPass.h  RenameMain.h  StubPass.h
instrumentation/tools/: README.md
instrumentation/tools/executables/: a.out  cjson  exiv2  exiv2.out  jasper  mjs  mjs.out  mutex  pace_server  pace_server.out  pace_shm  pngquant  run.out  run.sh  test  test_shm  unrtf  yara  yara.out  yara_plain
instrumentation/tools/files/: cjson_joined.bc  cjson_opt.bc  cs_harness.bc  cs_joined.bc  (+43 more)
main-pass/: CMakeLists.txt  README.md  main-pass  stubMain.c
main-pass/examples/: example2.c  example2.ll  random_exit.bc  random_exit.ll  random_exit_renamed.bc
main-pass/skeleton/: CMakeLists.txt  renameMain.cpp
main-pass/src/: Pass.cpp  renameMain.cpp
mutex-pass/examples/: example2_opt.ll  hello_world.c  rba.bc  rba.ll  rhm.bc  rhm.ll  stubMain.bc  stubMain.ll  stub_no_prints.bc  stub_prints.bc  test2.ll
mutex-pass/skeleton/: CMakeLists.txt  mutexSemaphore.cpp
mutex-pass/test/: j.outa  joined.ll  joined2.ll  jr.bc  jtest.bc  jtest.ll  r.ll  r2.ll  random_exit.ll  random_exit_renamed.ll  stubMain.ll  stubMainLong.ll
scripts/: bar-graph.py  correctness.py  cov.sh  edge-coverage.py  global-overhead.py  global_section_max_distance.py  plot-graph-from-csv.py  process-plot-data.py  scatter.py
src/: Common.cpp  ExitPass.cpp  FilePass.cpp  GlobalPass.cpp  HeapPass.cpp  Pass.cpp  RenameMainPass.cpp  StubPass.cpp
stub-pass/: CMakeLists.txt  example2.c  stubMain.bc  stubMain.c  stubMain.ll
stub-pass/skeleton/: CMakeLists.txt  modifyStubPass.cpp
stub-pass/src/: Pass.cpp
targets/: README.md
targets/freetype/: harness.c
targets/libbpf/: bpf-object-fuzzer.c
targets/libdwarf/: fuzz_dnames.c
targets/libpng/: pngfix.c
targets/lighttpd/: harness.c
targets/md4c/: fuzz-md4c.c
targets/oniguruma/: fuzz_oniguruma.c
targets/zlib/: harness.c
tests/afl-test/: a.out  preprocessed_persistent_demo.c
tests/all-pass-test/: Makefile  stubMain.c  test.c
tests/closure-test/: Makefile  test.c
tests/global-pass/: Makefile  stubMain.c  test-global.c
tests/heap-pass/: Makefile  stubMain-preprocessed.c  stubMain.c  test-heap.c
(+55 files in other folders)
